Modificando estilo en el hader

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>MicSpinis Page</title>
 </head>
 <body>
-    <div class="container main-container">
+    <div class="jumbotron">
         <h1>MicSpinis</h1>
         <hr>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi soluta ad ut sit numquam vero placeat, aperiam minima! Quis sint laboriosam voluptates cupiditate ex facere magni voluptas dolores voluptatibus?</p>
